<resources>
    <string name="app_name">COMI</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to SignUp -->
    <string name="prompt_signup_username">Username</string>
    <string name="prompt_signup_password">Password</string>
    <string name="prompt_signup_re_password">Re-enter Password</string>
    <string name="prompt_signup_email">Email</string>
    <string name="prompt_signup_name">Name</string>

    <!-- Strings related to SignUp -->
    <string name="prompt_recover_pw_email">Email</string>

</resources>
