<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_tiles"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/button2"
            android:background="#06920d"
            android:layout_toLeftOf="@+id/editText5"
            android:layout_toStartOf="@+id/editText5"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/prompt_signup_username"
            android:layout_alignParentTop="true"
            android:layout_marginTop="54dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColorHint="#e01010"
            android:textColor="#e01010"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/prompt_signup_password"
            android:layout_below="@+id/editText3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:textColor="#e01010"
            android:textColorHint="#e01010"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:id="@+id/button4"
            android:background="#06920d"
            android:layout_below="@+id/editText7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText5"
            android:hint="@string/prompt_signup_re_password"
            android:textAlignment="center"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#e01010"
            android:textColorHint="#e01010"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText6"
            android:hint="@string/prompt_signup_email"
            android:textAlignment="center"
            android:layout_below="@+id/editText5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2"
            android:textColor="#e01010"
            android:textColorHint="#e01010"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText7"
            android:hint="@string/prompt_signup_name"
            android:textAlignment="center"
            android:layout_below="@+id/editText6"
            android:layout_toRightOf="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#e01010"
            android:textColorHint="#e01010"/>
    </RelativeLayout>
</LinearLayout>